--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "pnpm run opennext:build && wrangler deploy --dry-run --outdir=dist",
+    "build:prod": "pnpm run opennext:build && pnpm dlx wrangler deploy --dry-run --outdir=dist",
     "opennext:build": "opennextjs-cloudflare build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "deploy": "pnpm run opennext:build && opennextjs-cloudflare deploy",
     "preview": "pnpm run opennext:build && opennextjs-cloudflare preview",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
+    "cf-typegen": "pnpm dlx wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
     "db:generate": "drizzle-kit generate --name",
-    "db:migrate:dev": "wrangler d1 migrations apply $(node scripts/get-db-name.mjs) --local",
-    "d1:cache:clean": "wrangler d1 execute $(node scripts/get-db-name.mjs) --command \"DELETE FROM tags; DELETE FROM revalidations\" --remote",
+    "db:migrate:dev": "pnpm dlx wrangler d1 migrations apply $(node scripts/get-db-name.mjs) --local",
+    "d1:cache:clean": "pnpm dlxwrangler d1 execute $(node scripts/get-db-name.mjs) --command \"DELETE FROM tags; DELETE FROM revalidations\" --remote",
     "email:dev": "email dev -d src/react-email -p 3001",
-    "list:kv": "wrangler kv key list --namespace-id=$(node scripts/get-kv-id.mjs) --remote | jq '[.[].name]' > kv.log",
-    "delete:kv": "wrangler kv bulk delete kv.log --namespace-id=$(node scripts/get-kv-id.mjs) --remote"
+    "list:kv": "pnpm dlx wrangler kv key list --namespace-id=$(node scripts/get-kv-id.mjs) --remote | jq '[.[].name]' > kv.log",
+    "delete:kv": "pnpm dlx wrangler kv bulk delete kv.log --namespace-id=$(node scripts/get-kv-id.mjs) --remote"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
